--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <img src="./assets/logo.png">
+        <a href="#"><img src="./assets/logo-multicolour.png"></a>
         <nav>
             <a href="#">WHO I AM</a>
             <a href="#">WHAT I DO</a>
@@ -25,6 +25,9 @@
         <video autoplay muted loop>
             <source src="./assets/StockVideo.mp4" type="video/mp4"/>
         </video>
+        <div>
+            Consultancy that's <span class="fancy">inspiring.</span>
+        </div>
     </div>
     
 </body>
