Add custom font, JS carousel

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap">
     <link rel="stylesheet" href="./style.css">
+    <script src="./javascript.js" defer></script>
 </head>
 <body>
 
@@ -23,10 +24,10 @@
 
     <div class="splash">
         <video autoplay muted loop>
-            <source src="./assets/StockVideo.mp4" type="video/mp4"/>
+            <source src="./assets/StockVideo1080P.mp4" type="video/mp4"/>
         </video>
         <div>
-            Consultancy that's <span class="fancy">inspiring.</span>
+            Consultancy that's <span id="splash-text">inspiring</span>
         </div>
     </div>
     
