Play around w/ headheadshot, quote section, etc. Test video speed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="section" id="about">
         <div class="headshot-container">
-            <img src="./assets/headshot-background.jpg">
+            <div></div>
             <img src="./assets/headshot2.png">
         </div>
         <div>
@@ -42,6 +42,10 @@
             <p>I am an adaptable individual who thrives on making a difference, finding solutions to a problem, setting goals and objectives, and building a happy, fun, and energetic workplace for all. From as far back as I can remember I have had a passion for the environment, animals and earth and have found this passion to reflect in various aspects of my career.</p>
             <p>Over time my drive to do better and to do things right as encouraged me to be bold and help other businesses make that change, which has enabled me to create Sustainable Minds Consultancy. You may not have the time or the knowledge within your current teams to accomplish what is needed to take your business to the next level and that's where I can help.</p>
         </div>
+    </div>
+
+    <div class="section" id="quote">
+        I believe if the <h1>values</h1> are right, your team and the people around you will be at their best.
     </div>
 
     <div class="section" id="services">
