Test video performance with 3 files instead of 1

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </header>
 
     <div class="splash">
-        <video autoplay muted loop>
-            <source src="./assets/stock-video.mp4" type="video/mp4"/>
-        </video>
+        <video src="./assets/stock-video1.mp4" type="video/mp4" id="splash-video1" autoplay muted loop></video>
+        <video src="./assets/stock-video2.mp4" type="video/mp4" id="splash-video2" autoplay muted loop></video>
+        <video src="./assets/stock-video3.mp4" type="video/mp4" id="splash-video3" autoplay muted loop></video>
         <div>
             Consultancy that's <span id="splash-text">inspiring</span>
         </div>
