Animate splash text

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
         <video src="./assets/stock-video2.mp4" type="video/mp4" id="splash-video2" autoplay muted loop></video>
         <video src="./assets/stock-video3.mp4" type="video/mp4" id="splash-video3" autoplay muted loop></video>
         <div>
-            Consultancy that's <span id="splash-text">inspiring</span>
+            Consultancy that's 
+            <span id="splash-text1">inspiring</span>
+            <span id="splash-text2">empowering</span>
+            <span id="splash-text3">thoughtful</span>
         </div>
     </div>
 
@@ -45,7 +48,7 @@
     </div>
 
     <div class="section" id="quote">
-        I believe if the <h1>values</h1> are right, your team and the people around you will be at their best.
+        I believe if the <span>values</span> are right,<br>your team and the people around you will be at their <span>best</span>.
     </div>
 
     <div class="section" id="services">
