Tweak animations again

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
         <div>
             Consultancy that's 
             <span id="splash-text1">inspiring</span>
-            <span id="splash-text2">empowering</span>
-            <span id="splash-text3">thoughtful</span>
+            <span id="splash-text2">conscientious</span>
+            <span id="splash-text3">empowering</span>
         </div>
     </div>
 
     <div class="section" id="about">
         <div class="headshot-container">
             <div></div>
-            <img src="./assets/headshot2.png">
+            <img src="./assets/headshot4.png">
         </div>
         <div>
             <h1>Who I am</h1>
@@ -48,25 +48,31 @@
     </div>
 
     <div class="section" id="quote">
-        I believe if the <span>values</span> are right,<br>your team and the people around you will be at their <span>best</span>.
+        I believe if the <span>values</span> are right,<br>your team and the people around you will be<br>at their <span>best</span>.
     </div>
 
     <div class="section" id="services">
-        <h1>What I do</h1>
-        <p>I can help you with...</p>
-        <ul>
-            <li>Strategy development</li>
-            <li>Managing change</li>
-            <li>Process design</li>
-            <li>Business and financial management</li>
-            <li>Negotiation</li>
-            <li>Management of health and safety</li>
-            <li>People development</li>
-            <li>Marketing and website design</li>
-            <li>Awareness of government legislation and regulatory issues</li>
-            <li>IT infrastructure implementation</li>
-            <li>Engaging and inspiring teams, customers and suppliers</li>
-        </ul>
+        <div>
+            <h1>What I do</h1>
+            <p>I can help you with...</p>
+            <ul>
+                <li>Strategy development</li>
+                <li>Managing change</li>
+                <li>Process design</li>
+                <li>Business and financial management</li>
+                <li>Negotiation</li>
+                <li>Management of health and safety</li>
+                <li>People development</li>
+                <li>Marketing and website design</li>
+                <li>Awareness of government legislation and regulatory issues</li>
+                <li>IT infrastructure implementation</li>
+                <li>Engaging and inspiring teams, customers and suppliers</li>
+            </ul>
+        </div>
+        <div class="headshot-container">
+            <div></div>
+            <img src="./assets/leaf.png">
+        </div>
     </div>
     
 </body>
