Refine splash animation, style services section

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     <div class="section" id="about">
         <div class="headshot-container">
             <div></div>
-            <img src="./assets/headshot4.png">
+            <img src="./assets/headshot.png">
         </div>
         <div>
             <h1>Who I am</h1>
             <p>Hello, I'm Jodi Sanders!</p>
             <p>I am an adaptable individual who thrives on making a difference, finding solutions to a problem, setting goals and objectives, and building a happy, fun, and energetic workplace for all. From as far back as I can remember I have had a passion for the environment, animals and earth and have found this passion to reflect in various aspects of my career.</p>
-            <p>Over time my drive to do better and to do things right as encouraged me to be bold and help other businesses make that change, which has enabled me to create Sustainable Minds Consultancy. You may not have the time or the knowledge within your current teams to accomplish what is needed to take your business to the next level and that's where I can help.</p>
+            <p>Over time my drive to do better and to do things right has encouraged me to be bold and help other businesses make that change, which has enabled me to create Sustainable Minds Consultancy. You may not have the time or the knowledge within your current teams to accomplish what is needed to take your business to the next level and that's where I can help.</p>
         </div>
     </div>
 
@@ -54,20 +54,24 @@
     <div class="section" id="services">
         <div>
             <h1>What I do</h1>
-            <p>I can help you with...</p>
-            <ul>
-                <li>Strategy development</li>
-                <li>Managing change</li>
-                <li>Process design</li>
-                <li>Business and financial management</li>
-                <li>Negotiation</li>
-                <li>Management of health and safety</li>
-                <li>People development</li>
-                <li>Marketing and website design</li>
-                <li>Awareness of government legislation and regulatory issues</li>
-                <li>IT infrastructure implementation</li>
-                <li>Engaging and inspiring teams, customers and suppliers</li>
-            </ul>
+            <p>I can help your business with a variety of operations, including...</p>
+            <div class="bullet-points">
+                <ul>
+                    <li>Strategy development</li>
+                    <li>Managing change</li>
+                    <li>Process design</li>
+                    <li>Business and financial management</li>
+                    <li>Negotiation</li>
+                    <li>Management of health and safety</li>
+                </ul>
+                <ul>
+                    <li>People development</li>
+                    <li>Marketing and website design</li>
+                    <li>Awareness of government legislation and regulatory issues</li>
+                    <li>IT infrastructure implementation</li>
+                    <li>Engaging and inspiring teams, customers and suppliers</li>
+                </ul>
+            </div>
         </div>
         <div class="headshot-container">
             <div></div>
