Add contact and footer sections

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </div>
 
-    <div class="section" id="quote">
+    <div class="section quote">
         I believe if the <span>values</span> are right,<br>your team and the people around you will be<br>at their <span>best</span>.
     </div>
 
@@ -75,9 +75,31 @@
         </div>
         <div class="headshot-container">
             <div></div>
-            <img src="./assets/leaf.png">
+            <img src="./assets/blocks.png">
         </div>
     </div>
+
+    <div class="section quote">
+        With effective <span>communication</span> skills<br>and a proven ability to engage and inspire teams,<br>I can implement <span>change</span> successfully.
+    </div>
+
+    <div class="section" id="contact">
+        <div class="headshot-container">
+            <div></div>
+            <img src="./assets/leaf.png">
+        </div>
+        <div>
+            <h1>Contact Me</h1>
+            <p>I am always looking for new opportunities to grow and learn. If you're interested in connecting, please don't hesitate to reach out.</p>
+            <p>LinkedIn<br>
+            Email<br>
+            Phone</p>
+        </div>
+    </div>
+
+    <footer class="section">
+        © Copyright 2023 | Website by Simply Page 1 | All Rights Reserved
+    </footer>
     
 </body>
 </html>
