--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <a href="#about">WHO I AM</a>
             <a href="#services">WHAT I DO</a>
-            <a href="#">CONTACT</a>
+            <a href="#contact">CONTACT</a>
         </nav>
     </header>
 
@@ -91,24 +91,10 @@
         <div>
             <h1>Contact Me</h1>
             <p>I am always looking for new opportunities to grow and learn. If you're interested in connecting or working together, please don't hesitate to reach out.</p>
-            <p>
-                <img src="./assets/icons/linkedin.svg">
-                <a href="https://uk.linkedin.com/in/jodilsanders">LinkedIn</a>
-            </p>
-            <p>
-                <img src="./assets/icons/facebook.svg">
-                <a href="#">Facebook</a>
-            </p>
-            <p>
-                <img src="./assets/icons/mail.svg">
-                <a href="#">jsanders@sustainableminds.co.uk</a>
-            </p>
-            <p>
-                <img src="./assets/icons/phone.svg">
-                0123 - 456 - 789
-            </p>
-
-
+            <p><img src="./assets/icons/linkedin.svg"><a href="https://uk.linkedin.com/in/jodilsanders">LinkedIn</a></p>
+            <p><img src="./assets/icons/facebook.svg"><a href="#">Facebook</a></p>
+            <p><img src="./assets/icons/mail.svg"><a href="#">jsanders@sustainableminds.co.uk</a></p>
+            <p><img src="./assets/icons/phone.svg">0123 - 456 - 789</p>
         </div>
     </div>
 
