Add media queries for screen sizes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="section quote">
-        I believe if the <span>values</span> are right,<br>your team and the people around you will be<br>at their <span>best</span>.
+        I believe if the <span>values</span> are right, your team and the people around you will be at their <span>best</span>.
     </div>
 
     <div class="section" id="services">
@@ -80,7 +80,7 @@
     </div>
 
     <div class="section quote">
-        With effective <span>communication</span> skills<br>and the ability to engage and inspire teams,<br>I can implement <span>change</span> successfully.
+        With effective <span>communication</span> skills and the ability to engage and inspire teams, I can implement <span>change</span> successfully.
     </div>
 
     <div class="section" id="contact">
